update plugin api
